<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_main"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_detail"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <EditText
        android:hint="@string/constraint"
        android:id="@+id/name_edit_text"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="10"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/caution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/invisible"
        android:text="@string/name_warning"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="12dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/word_main"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:text="@string/word_detail"/>

    <EditText
        android:hint="@string/constraint"
        android:id="@+id/word_edit_text"
        android:layout_marginLeft="24sp"
        android:layout_marginRight="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:maxLength="10"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/green"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:text="@string/ok_button"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>